--- a/junkpage.html
+++ b/junkpage.html
@@ -16,4 +16,8 @@
 
         <h1>Sorry but this is not a real thing, however we wish it was. We aren't actually the 60th national park, as we recently found out there is now a new park in St. Louis, Missouri.
             It is true that this park is based of the Flathead National Forest on our site. Check that out and the Glacier National Park.
-            By the way 1-day park passes are $10 while $50 for week passes.
+            By the way 1-day park passes are $10 while $50 for week passes.</h1>
+
+        </body>
+        </html>
+
