--- a/page12.html
+++ b/page12.html
@@ -39,7 +39,7 @@
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="page5.html">Airport Information</a>
                         <a class="dropdown-item" href="page12.html">Hotels/Resturants</a>
-                        <a class="dropdown-item" href="">Attractions</a>
+                        <a class="dropdown-item" href="page11.html">Attractions</a>
                       </div>
                     </li>
                     <li class="nav-item">
@@ -83,7 +83,7 @@
               </div>
 
 
-<h1>Resturants<h1>
+<h1>Resturants</h1>
     <div class="card-group">
         <div class="card">
           <img class="card-img-top" src="images/res2Resize.jpg" alt="Card image cap">
