--- a/page2.html
+++ b/page2.html
@@ -30,10 +30,10 @@
                 <a class="nav-link" href="page3.html">About</a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="page2.html">Animals/Wilderness</a>
             </li>
-            <li class="nav-item dropdown active">
+            <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
                     Visitor Information
@@ -41,7 +41,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="page5.html">Airport Information</a>
                     <a class="dropdown-item" href="page12.html">Hotels/Resturants</a>
-                    <a class="dropdown-item" href="#">Attractions</a>
+                    <a class="dropdown-item" href="page11.html">Attractions</a>
                 </div>
             </li>
             <li class="nav-item">
