--- a/page4.html
+++ b/page4.html
@@ -44,7 +44,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="page5.html">Airport Information</a>
                         <a class="dropdown-item" href="page12.html">Hotels/Resturants</a>
-                        <a class="dropdown-item" href="#">Attractions</a>
+                        <a class="dropdown-item" href="page11.html">Attractions</a>
                     </div>
                 </li>
                 <li class="nav-item active">
@@ -70,6 +70,23 @@
             <p class="lead">Stay inside the park so you don't waste time and money. Do multiple things at a time and have a plan at all times.
                 Carry a map at all times. See what your group wants to do; and make a schedule for it.
             </p>
+
+            <h3>Check out our reviews! Some of them are right here!</h3>
+
+                <p>We loved this park! It had everything we wanted: remoteness, quietness, sheer beauty, and plenty of things to do. The climbing
+                    was challenging but awesome, there were plenty of hiking trails, and the fishing was rewarding too! 5 Stars!
+                    - Dante Bogaerts, Lexington, KY
+<br>
+                   I came here alone to check this park out. The whole experience was great. I flew into GPI, did some great hiking, went backpacking
+                   with some friends i found here, but i found that I really wanted to stay. This place is the best park i've been to! 5 Stars!
+                   - Davidson Cruz, San Antonio, TX
+<br>
+                   I love this place. Everything is great from the park to the whole experience all together. I used this website to visit and everything 
+                   worked perfectly. This is the first time I've not had to worry about a trip at all. My friends that I came with loved it too! 5 Stars!
+                   - Kenan Evans Jr, New Orleans, LA
+
+                </p>                          
+
             <p>Sorry we do not have our blog up and running yet. We are working on that.</p>
         </div>
     </div>
