--- a/page5.html
+++ b/page5.html
@@ -45,7 +45,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="page5.html">Airport Information</a>
                         <a class="dropdown-item" href="page12.html">Hotels/Resturants</a>
-                        <a class="dropdown-item" href="#">Attractions</a>
+                        <a class="dropdown-item" href="page11.html">Attractions</a>
                     </div>
                 </li>
                 <li class="nav-item">
