--- a/page6.html
+++ b/page6.html
@@ -40,7 +40,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="page5.html">Airport Information</a>
             <a class="dropdown-item" href="page12.html">Hotels/Resturants</a>
-            <a class="dropdown-item" href="">Attractions</a>
+            <a class="dropdown-item" href="page9.html">Attractions</a>
           </div>
         </li>
         <li class="nav-item">
@@ -63,35 +63,33 @@
           Despite these differences, all mammals share four traits that are shown in the diagram below: hair, mammary glands, a hinged jaw, and three tiny middle ear bones. Most have specialized teeth and moveable external ears.
         </p>
         <div>
-        <img src="" alt="Snow leopards">
         <h5 class="center">Mammals</h5>
         <div>
           <ul>
-        <li>American bison
-        </li>
-       <li>Black bear</li>
-          <li>Bighorn sheep</li>
-          	<li>Bobcat</li>
-                <li>Canadian lynx</li>
-                    <li>Caribou</li>
-                        <li>Cougar</li>
-                            <li>Coyote</li>
-                                <li>Elk</li>
-                                    <li>Grizzly bear</li>
-                                        <li>Jaguar</li>
-                                            <li>Moose</li>
-                                                <li>Mountain goat</li>
-                                                    <li>Mule deer</li>
-                                                        <li>Pronghorn</li>
-                                                            <li>Red fox</li>
-                                                                <li>Snow leopard</li>
-                                                                    <li>Swift fox</li>
-                                                                        <li>White-tailed deer</li>
-                                                                            <li>Wolf
-        </li>
-      </ul>
+            <li>American bison
+            </li>
+            <li>Black bear</li>
+            <li>Bighorn sheep</li>
+            <li>Bobcat</li>
+            <li>Canadian lynx</li>
+            <li>Caribou</li>
+            <li>Cougar</li>
+            <li>Coyote</li>
+            <li>Elk</li>
+            <li>Grizzly bear</li>
+            <li>Jaguar</li>
+            <li>Moose</li>
+            <li>Mountain goat</li>
+            <li>Mule deer</li>
+            <li>Pronghorn</li>
+            <li>Red fox</li>
+            <li>Snow leopard</li>
+            <li>Swift fox</li>
+            <li>White-tailed deer</li>
+            <li>Wolf</li>
+          </ul>
       </div>
-        </body>
+  </body>
 
 </html>
 
