--- a/page8.html
+++ b/page8.html
@@ -40,14 +40,14 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="page5.html">Airport Information</a>
             <a class="dropdown-item" href="page12.html">Hotels/Resturants</a>
-            <a class="dropdown-item" href="">Attractions</a>
+            <a class="dropdown-item" href="page11.html">Attractions</a>
           </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="page4.html">Opinion/Blog</a>
         </li>
         <form class="form-inline my-2 my-lg-0">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Tickets</button>
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Passes</button>
         </form>
   </nav>
   <h1 align="center" class="special-passage">Fish</h1>
@@ -67,15 +67,15 @@
         <div>
             <ul>
         The fish species in the lake consist primarily of
-            <li> lake trout</li> 
+            <li> Lake Trout</li> 
             <li>Pike</li>
-        <li> Yellow perch</li>
+        <li> Yellow Perch</li>
         <li>Whitefish</li>
-        <li>with some Rainbow trout</li>
-        <li>bass</li>
-        <li> Kokanee salmon</li><li>Bull trout
+        <li>with some Rainbow Trout</li>
+        <li>Bass</li>
+        <li> Kokanee Salmon</li><li>Bull Trout
 
-        </li>The lake trout in Flathead Lake can reach monstrous sizes<br>and frequently exceeding twenty-pounds.
+        </li>The Lake Trout in Flathead Lake can reach monstrous sizes<br>frequently exceeding twenty-pounds.
 
 
       </ul>
