--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="page5.html">Airport Information</a>
                         <a class="dropdown-item" href="page12.html">Hotels/Resturants</a>
-                        <a class="dropdown-item" href="#">Attractions</a>
+                        <a class="dropdown-item" href="page11.html">Attractions</a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="page4.html">Opinion/Blog</a>
                 </li>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Passes</button>
+ <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buy Passes</button>
                 </form>
         </div>
     </nav>
@@ -118,14 +118,7 @@
 
   <!---
       Welcome Section
-      http://www.simpleimageresizer.com/_uploads/photos/8c5d9ed0/valley_of_the_ten_peaks_1365x546.jpg
-      http://www.simpleimageresizer.com/_uploads/photos/8c5d9ed0/smoke_mountain_1365x546.jpg
-      http://www.simpleimageresizer.com/_uploads/photos/8c5d9ed0/waterfall_1365x546.jpeg
-      http://www.simpleimageresizer.com/_uploads/photos/8c5d9ed0/mountain_lakes_1365x546.jpg
-      http://www.simpleimageresizer.com/_uploads/photos/8c5d9ed0/valley_of_the_ten_peaks.2_1365x546.jpg
-      http://www.simpleimageresizer.com/_uploads/photos/8c5d9ed0/black_lake_1365x546.jpg
-      http://www.simpleimageresizer.com/_uploads/photos/8c5d9ed0/mammoth_cave_1365x546.jpg
-      
+      http://131.194.71.250:5500/index.html
                                                                                           
     -->
 
